@@ -5579,7 +5579,7 @@ sub _d {
 # ###########################################################################
 
 # ###########################################################################
-# ReportFormatter package 6190
+# ReportFormatter package 7093
 # This package is a copy without comments from the original.  The original
 # with comments and its test file can be found in the SVN repository at,
 #   trunk/common/ReportFormatter.pm
@@ -5923,7 +5923,7 @@ sub _d {
 # ###########################################################################
 
 # ###########################################################################
-# QueryReportFormatter package 7090
+# QueryReportFormatter package 7094
 # This package is a copy without comments from the original.  The original
 # with comments and its test file can be found in the SVN repository at,
 #   trunk/common/QueryReportFormatter.pm
@@ -5972,6 +5972,17 @@ sub new {
       },
    };
    return bless $self, $class;
+}
+
+sub set_report_formatter {
+   my ( $self, %args ) = @_;
+   my @required_args = qw(report formatter);
+   foreach my $arg ( @required_args ) {
+      die "I need a $arg argument" unless exists $args{$arg};
+   }
+   my ($report, $formatter) = @args{@required_args};
+   $self->{formatter_for}->{$report} = $formatter;
+   return;
 }
 
 sub print_reports {
@@ -6513,12 +6524,25 @@ sub profile {
          vmr    => ($query_time->{stddev}**2) / ($query_time->{avg} || 1),
          apdex  => defined $query_time->{apdex} ? $query_time->{apdex} : "NS",
       ); 
-     
+
+      if ( $o->get('explain') && $samp_query ) {
+         my $sparkline = $stats->{sparkline};
+         if ( !$sparkline ) {
+            eval {
+               $sparkline = $self->explain_sparkline($samp_query);
+               $stats->{sparkline} = $sparkline;
+            };
+            if ( $EVAL_ERROR ) {
+               MKDEBUG && _d("Failed to print EXPLAIN sparkline:", $EVAL_ERROR);
+            }
+         }
+         $profile{sparkline} = $sparkline || "";
+      }
 
       push @profiles, \%profile;
    }
 
-   my $report = $args{ReportFormatter} || new ReportFormatter(
+   my $report = $self->{formatter_for}->{profile} || new ReportFormatter(
       line_width       => LINE_LENGTH,
       long_last_column => 1,
       extend_right     => 1,
@@ -6532,6 +6556,7 @@ sub profile {
       { name => 'R/Call',        right_justify => 1,             },
       { name => 'Apdx',          right_justify => 1, width => 4, },
       { name => 'V/M',           right_justify => 1, width => 5, },
+      ( $o->get('explain') ? { name => 'EXPLAIN' } : () ),
       { name => 'Item',                                          },
    );
    $report->set_columns(@cols);
@@ -6549,6 +6574,7 @@ sub profile {
          $rc,
          $item->{apdex},
          $vmr,
+         ( $o->get('explain') ? $item->{sparkline} || "" : () ),
          $item->{sample},
       );
       $report->add_line(@vals);
@@ -6644,7 +6670,7 @@ sub prepared {
 
    return unless scalar @prepared;
 
-   my $report = $args{ReportFormatter} || new ReportFormatter(
+   my $report = $self->{formatter_for}->{prepared} || new ReportFormatter(
       line_width       => LINE_LENGTH,
       long_last_column => 1,
       extend_right     => 1,     
@@ -12411,6 +12437,15 @@ sub main {
                   ExplainAnalyzer => $exa,
                   %common_modules,
                );
+               # http://code.google.com/p/maatkit/issues/detail?id=1141
+               $qrf->set_report_formatter(
+                  report    => 'profile',
+                  formatter => new ReportFormatter (
+                     line_width       => $o->get('explain') ? 82 : 74,
+                     long_last_column => 1,
+                     extend_right     => 1,
+                  ),
+               );
                $qrf->print_reports(
                   reports      => \@reports,
                   ea           => $ea[$i],
@@ -12422,7 +12457,7 @@ sub main {
                   explain_why  => $explain_why,
                   files        => \@read_files,
                   log_type     => $o->get('type')->[0],
-                  group        => {map {$_=>1} qw(rusage date hostname files header)}
+                  group        => { map { $_=>1 } qw(rusage date hostname files header) }
                );
             }
 
