@@ -1,0 +1,5 @@
+
+# Profile
+# Rank Query ID           Response time     Calls R/Call   Apdx V/M   EXPLAIN Item
+# ==== ================== ================= ===== ======== ==== ===== ======= ====
+#    1 0x8E306CDB7A800841     0.0000 100.0%     1   0.0000 1.00  0.00 I       SELECT trees
