@@ -1,5 +1,7 @@
 Changelog for mk-query-digest:
 
+   * Added EXPLAIN sparkline (issue 1141).
+
 2010-11-08: version 0.9.23
 
    * Rearranged and regrouped query event output (issue 696).
